--- a/auth/src/components/Login/Login.modules.css
+++ b/auth/src/components/Login/Login.modules.css
@@ -1,5 +1,6 @@
 .dFlex{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
+    /* flex-direction: ; */
 }
