--- a/auth/src/components/Login/Login.modules.css
+++ b/auth/src/components/Login/Login.modules.css
@@ -1,6 +1,5 @@
 .dFlex{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-    /* flex-direction: ; */
 }
